Fix thumbnail overflow

--- a/css/_filmstrip.scss
+++ b/css/_filmstrip.scss
@@ -50,6 +50,7 @@
         position:relative;
         height:196px;
         padding: 0;
+        padding-left: 17px;
         bottom: 0;
         width:auto;
         border: 2px solid transparent;
